[tool.poetry]
name = "watcher"
version = "0.1.0"
description = "Watcher Discord Bot"
authors = ["Myned <dev@bjork.tech>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
toml = "*"
uvloop = "*"
sqlitedict = "*"
hikari = {extras = ["speedups"], version = "*"}
hikari-lightbulb = "*"
hikari-miru = "*"

[tool.poetry.group.dev.dependencies]
black = "*"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
