[tool.poetry]
package-mode = false
name = "watcher"
version = "0.1.0"
description = "Watcher Discord Bot"
authors = ["Myned <dev@bjork.tech>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
toml = "^0.10.2"
uvloop = "^0.19.0"
sqlitedict = "^2.1.0"
hikari = {extras = ["speedups"], version = "^2.0.0.dev125"}
hikari-lightbulb = "^2.3.5"
hikari-miru = "^4.1.1"

[tool.poetry.group.dev.dependencies]
black = "*"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
